Cache fix and changes